Fixes some bugs and add better system to look for accounts
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1481 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/activerecord.yml
+++ b/config/locales/eng/activerecord.yml
@@ -205,6 +205,7 @@ eng:
         #>locations: 'Lieux de stockage'
         lock_version: 'Version'
         #>locked: 'Verrouillée'
+        #>major_accounts: '(((MAJOR_ACCOUNTS)))'
         #>mandates: 'Responsabilités'
         name: 'Name'
         #>observations: 'Observations'
@@ -991,8 +992,8 @@ eng:
         name: 'Name'
         #>number_account: 'Nber'
         #>position: 'Position'
-        #>record: 'Numéro'
-        #>record_id: 'Numéro'
+        #>record: 'Pièce comptable'
+        #>record_id: 'Pièce comptable'
         #>statement: 'Relevé de compte'
         #>statement_id: 'Relevé de compte'
         updated_at: 'Updated at'
@@ -2186,7 +2187,7 @@ eng:
         #>included_in: 'La valeur de {{attribute}} doit être comprise entre {{minimum}} et {{maximum}}'
         inclusion: '{{attribute}} is not included in the list'
         invalid: '{{attribute}} is invalid'
-        #>invalid_at: '{{attribute}} est invalide. Erreur près de {{error}}'
+        invalid_at: '{{attribute}} is_invalid. Error near {{error}}'
         #>invalid_token: '{{attribute}} est invalide. Symbole inconnu {{error}}. Les symboles acceptés sont {{accepted}}.'
         less_than: '{{attribute}} must be less than {{count}}'
         less_than_or_equal_to: '{{attribute}} must be less than or equal to {{count}}'
@@ -2396,13 +2397,13 @@ eng:
       #>profession: 'Professions'
       #>purchase_order: 'Achats'
       #>purchase_order_line: 'Lignes d''achat'
-      #>role: 'Rôles'
+      role: 'Roles'
       #>sale_order: 'Ventes'
       #>sale_order_line: 'Lignes de vente'
       #>sale_order_nature: 'Types de vente'
       #>sequence: 'Séquences'
       #>shape: 'Îlots'
-      #>shelf: 'Catégories de produit'
+      shelf: 'Shelves'
       #>stock: 'Stocks de produit'
       #>stock_move: 'Mouvements de stock'
       #>stock_transfer: 'Transferts ou perte de Stock'
@@ -2410,10 +2411,10 @@ eng:
       #>subscription_nature: 'Types d''abonnement'
       #>tax: 'Taxes'
       #>tax_declaration: 'Déclarations de taxes'
-      #>tool: 'Outils'
+      tool: 'Tool'
       #>tool_use: 'Utilisations d''outil'
       #>tracking: 'Lots traçables'
-      #>transfer: 'Transferts'
-      #>transport: 'Transports'
-      #>unit: 'Unités'
-      #>user: 'Utilisateurs'
+      transfer: 'Transfers'
+      transport: 'Transports'
+      unit: 'Units'
+      user: 'Users'
