--- a/config/locales/jpn/activerecord.yml
+++ b/config/locales/jpn/activerecord.yml
@@ -205,6 +205,7 @@ jpn:
         #>locations: 'Lieux de stockage'
         lock_version: '修正の番号'
         #>locked: 'Verrouillée'
+        #>major_accounts: '(((MAJOR_ACCOUNTS)))'
         #>mandates: 'Responsabilités'
         name: '名前'
         #>observations: 'Observations'
@@ -991,8 +992,8 @@ jpn:
         name: '名前'
         #>number_account: 'Nber'
         #>position: 'Position'
-        #>record: 'Numéro'
-        #>record_id: 'Numéro'
+        #>record: 'Pièce comptable'
+        #>record_id: 'Pièce comptable'
         #>statement: 'Relevé de compte'
         #>statement_id: 'Relevé de compte'
         #>updated_at: 'Mis à jour le'
