--- a/config/locales/eng/pack.management.yml
+++ b/config/locales/eng/pack.management.yml
@@ -177,7 +177,7 @@ eng:
         #>unit: 'Unité'
         #>validate: 'Valider '
       inventory_update:
-        #>inventory: 'Mofifiez votre inventaire'
+        #>inventory: 'Modifiez votre inventaire'
         #>title: 'Modification de l''inventaire'
         #>validate: 'Valider les changements'
       invoice:
@@ -567,7 +567,7 @@ eng:
         #>nature: 'Opération'
         #>product: '{{product}} ({{unit}})'
       stock_move_update:
-        #>title: 'Modifier le mouvement de stock : {{value}}'
+        #>title: 'Modifier le mouvement de stock : {{name}}'
       stock_transfer_create:
         #>title: 'Ajouter un transfert ou une perte de stocks'
       stock_transfer_update:
