--- a/config/locales/eng/pack.relations.yml
+++ b/config/locales/eng/pack.relations.yml
@@ -254,7 +254,7 @@ eng:
       event_nature_create:
         #>title: 'Ajouter un type d''évènement'
       event_nature_update:
-        #>title: 'Modification du type d''évènement "{{value}}"'
+        #>title: 'Modification du type d''évènement : {{name}}'
       event_natures:
         #>event_nature_create: 'Ajout d''un type d''évènement'
         #>title: 'Types d''évènements'
