--- a/config/locales/jpn/notifications.yml
+++ b/config/locales/jpn/notifications.yml
@@ -59,7 +59,7 @@ jpn:
     #>password_successfully_changed: 'Votre mot de passe a été mis à jour avec succès'
     #>prices_import_succeeded: 'Vos données ont été correctement importées'
     #>print_failure: 'Impossible d''imprimer. Essayer de recharger les modèles de documents pour corriger le problème. {{error}} ({{class}}).'
-    #>record_cannot_be_removed: '(((RECORD_CANNOT_BE_REMOVED)))'
+    #>record_cannot_be_removed: 'L''enregistrement ne peut pas être supprimé'
     #>record_has_been_correctly_removed: 'L''enregistrement a été supprimé correctement'
     #>record_has_not_been_removed: 'L''enregistrement n''a pas être supprimé correctement'
     #>restoration_finished: 'La restauration de la sauvegarde s''est terminée (en {{value}} secondes). Votre code société est {{code}}'
@@ -70,7 +70,7 @@ jpn:
     #>specify_updates: 'Vous devez spécifier au moins un champ à modifier'
     #>unavailable_model: '{{model}} indisponible ou inexistante ({{id}})'
     #>unknown_action: 'La page demandée est indisponible ({{url}})'
-    #>unknown_company: '(((UNKNOWN_COMPANY)))'
+    #>unknown_company: 'Société inconnue'
     #>unvalid_version_for_restore: 'La version du logiciel utilisé pour effectuer la sauvegarde ne correspond pas à la version actuelle du logiciel'
     #>update_is_done: 'La mise à jour a été effectuée'
     #>validates_old_inventories: 'Il est conseillé de supprimer ou de valider les inventaires non validés avant d''en faire un nouveau'
