--- a/config/locales/spa/activerecord.yml
+++ b/config/locales/spa/activerecord.yml
@@ -205,6 +205,7 @@ spa:
         #>locations: 'Lieux de stockage'
         #>lock_version: 'Version'
         #>locked: 'Verrouillée'
+        #>major_accounts: '(((MAJOR_ACCOUNTS)))'
         #>mandates: 'Responsabilités'
         name: 'Nombre'
         #>observations: 'Observations'
@@ -991,8 +992,8 @@ spa:
         name: 'Nombre'
         #>number_account: 'Nber'
         #>position: 'Position'
-        #>record: 'Numéro'
-        #>record_id: 'Numéro'
+        #>record: 'Pièce comptable'
+        #>record_id: 'Pièce comptable'
         #>statement: 'Relevé de compte'
         #>statement_id: 'Relevé de compte'
         #>updated_at: 'Mis à jour le'
