--- a/config/locales/fra/pack.company.yml
+++ b/config/locales/fra/pack.company.yml
@@ -68,6 +68,10 @@ fra:
         title: 'Aide'
       _help_result:
         pertinence: '{{value}}%'
+      import:
+        title: 'Importation'
+        file_to_import: Fichier à importer
+        file_nature: Type de fichier
       index:
         accountancy: 'Comptabilité générale' #!
         backups: 'Sauvegardes' #!
@@ -133,7 +137,7 @@ fra:
         title: 'Modification de l''extraction {{value}}'
       listings:
         listing_create: 'Créer une nouvelle extraction'
-        title: 'Extractions de données'
+        title: 'Exportation, mailing'
       _rights_form:
         accountancy_rights: 'Droits module Comptabilité' #!
         company_rights: 'Droits module Société' #!
