Fixes some bugs and hide temporarly entity import/export
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1484 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fra/pack.company.yml
+++ b/config/locales/fra/pack.company.yml
@@ -137,7 +137,7 @@ fra:
         title: 'Modification de l''extraction {{value}}'
       listings:
         listing_create: 'Créer une nouvelle extraction'
-        title: 'Exportation, mailing'
+        title: 'Exportations et mailings'
       _rights_form:
         accountancy_rights: 'Droits module Comptabilité' #!
         company_rights: 'Droits module Société' #!
