--- a/config/locales/fra/rights.yml
+++ b/config/locales/fra/rights.yml
@@ -23,6 +23,7 @@ fra:
     create_purchases: 'Créer, modifier des achats'
     extract_listings: 'Effectuer des extractions (sans pouvoir les concevoir)'
     give_discounts_on_sale: 'Octroyer des réductions commerciales lors des ventes'
+    import_data: 'Importer des données d''autres logiciels'
     import_export_entities: 'Importer, exporter des fiches clients/fournisseurs'
     mail_listings: 'Gérer l''envoi de courriels'
     manage_accounts: 'Gérer les comptes comptables'
