--- a/config/locales/spa/general.yml
+++ b/config/locales/spa/general.yml
@@ -81,6 +81,7 @@ spa:
       iso: '(AAAA-MM-JJ)'
     #>from: 'À partir du'
     #>hint: 'Astuce&nbsp;: {{value}}'
+    #>import: 'Importer'
     #>indicator: 'Tableau de bord'
     #>info: 'Information&nbsp;: {{value}}'
     #>letter: 'Lettrer'
@@ -577,7 +578,6 @@ spa:
         #>accountancy_tasks: 'Travaux comptables'
         #>accountize: 'Bascule comptable'
         #>bank_account_statements: 'Relevés de compte'
-        #>company_tasks: 'Outils'
         #>import_export: 'Import/Export de fiches'
         #>informations: 'Informations'
         #>my_account: 'Mon compte'
@@ -588,3 +588,4 @@ spa:
         #>sales: 'Ventes'
         #>stock_transfers: 'Transferts et pertes'
         #>stocks_tasks: 'Stocks'
+        #>tools: 'Outils'
