--- a/config/locales/eng/activerecord.yml
+++ b/config/locales/eng/activerecord.yml
@@ -178,13 +178,13 @@ eng:
         #>embankable_payments: 'Réglements encaissables'
         #>embankments: 'Encaissements'
         #>employees: 'employés'
-        #>entities: 'Relations'
-        #>entity: 'Fiche relation'
-        #>entity_categories: 'Catégories de relation'
-        #>entity_id: 'Fiche relation'
-        #>entity_link_natures: 'Natures de lien entre relations'
-        #>entity_links: 'Liens de relation'
-        #>entity_natures: 'Types de relation'
+        #>entities: 'Personnes'
+        #>entity: 'Fiche personne'
+        #>entity_categories: 'Catégories de personne'
+        #>entity_id: 'Fiche personne'
+        #>entity_link_natures: 'Natures de lien entre personnes'
+        #>entity_links: 'Liens de personne'
+        #>entity_natures: 'Types de personne'
         #>establishments: 'Établissements'
         #>event_natures: 'Types d''évènement'
         #>events: 'Évènements'
@@ -392,7 +392,7 @@ eng:
         created_at: 'Created at'
         creator: 'Creator'
         creator_id: 'Creator'
-        #>entities: 'Relations'
+        #>entities: 'Personnes'
         #>expression: 'Expression'
         id: 'ID'
         #>invoices: 'Factures'
@@ -682,7 +682,7 @@ eng:
         #>default: 'Par défaut'
         deleted: 'Deleted'
         #>description: 'Description'
-        #>entities: 'Relations'
+        #>entities: 'Personnes'
         id: 'ID'
         lock_version: 'Version'
         name: 'Name'
@@ -717,7 +717,7 @@ eng:
         created_at: 'Created at'
         creator: 'Creator'
         creator_id: 'Creator'
-        #>entity_links: 'Liens de relation'
+        #>entity_links: 'Liens de personne'
         id: 'ID'
         lock_version: 'Version'
         name: 'Name'
@@ -737,7 +737,7 @@ eng:
         creator: 'Creator'
         creator_id: 'Creator'
         #>description: 'Description'
-        #>entities: 'Relations'
+        #>entities: 'Personnes'
         id: 'ID'
         #>in_name: 'Abréviation incluse dans le nom de la fiche'
         lock_version: 'Version'
@@ -771,8 +771,8 @@ eng:
         creator: 'Creator'
         creator_id: 'Creator'
         #>duration: 'Durée (en minutes)'
-        #>entity: 'Relation'
-        #>entity_id: 'Relation'
+        #>entity: 'Personne'
+        #>entity_id: 'Personne'
         id: 'ID'
         #>location: 'Lieu'
         lock_version: 'Version'
@@ -915,8 +915,8 @@ eng:
         creator_id: 'Creator'
         #>credit_lines: 'Lignes d''avoir'
         #>credited_quantity: 'Quantité déjà passée en avoir'
-        #>entity: 'Relation'
-        #>entity_id: 'Relation'
+        #>entity: 'Personne'
+        #>entity_id: 'Personne'
         id: 'ID'
         #>invoice: 'Facture'
         #>invoice_id: 'Facture'
@@ -1031,7 +1031,7 @@ eng:
         creator: 'Creator'
         creator_id: 'Creator'
         #>document_templates: 'Modèles de document'
-        #>entities: 'Relations'
+        #>entities: 'Personnes'
         id: 'ID'
         #>iso2: 'Code ISO 2'
         #>iso3: 'Code ISO 3'
@@ -1334,7 +1334,7 @@ eng:
         creator: 'Creator'
         creator_id: 'Creator'
         #>embankable_payments: 'Réglements encaissables'
-        #>entities: 'Relations'
+        #>entities: 'Personnes'
         id: 'ID'
         lock_version: 'Version'
         #>mode: 'Mode'
@@ -1678,8 +1678,8 @@ eng:
         creator_id: 'Creator'
         #>delivery_lines: 'Lignes de livraison'
         #>discount: 'Réduction (en %)'
-        #>entity: 'Relation'
-        #>entity_id: 'Relation'
+        #>entity: 'Personne'
+        #>entity_id: 'Personne'
         id: 'ID'
         #>invoice_lines: 'Lignes de facture'
         #>invoiced: 'Facturée'
@@ -2249,7 +2249,7 @@ eng:
           #>location_can_not_waste_product: 'Vous ne pouvez pas enregistrer de perte pour  le produit {{product}} depuis le lieu de stockage {{location}}, celui-ci contient le produit {{contained_product}}'
           #>locations_can_not_be_identical: 'Les lieux de stockage (départ et arrivée) ne peuvent pas être identiques'
         subscription:
-          #>entity_must_be_the_same_as_the_contact_entity: 'La relation de l''abonnement doit être la même que celle du contact'
+          #>entity_must_be_the_same_as_the_contact_entity: 'La personne de l''abonnement doit être la même que celle du contact'
         tax_declaration:
           #>declaration_date_after_period: 'Vous devez faire votre déclaration après la période considérée.'
           #>one_data_to_record_tax_declaration: 'Vous devez avoir au moins un montant non nul.'
@@ -2280,11 +2280,11 @@ eng:
       #>document: 'Document'
       #>document_template: 'Modèle de document'
       #>embankment: 'Encaissement'
-      #>entity: 'Relation'
-      #>entity_category: 'Catégorie de relation'
-      #>entity_link: 'Lien de relation'
-      #>entity_link_nature: 'Nature de lien entre relations'
-      #>entity_nature: 'Type de relation'
+      #>entity: 'Personne'
+      #>entity_category: 'Catégorie de personne'
+      #>entity_link: 'Lien de personne'
+      #>entity_link_nature: 'Nature de lien entre personnes'
+      #>entity_nature: 'Type de personne'
       #>establishment: 'Établissement'
       #>event: 'Évènement'
       #>event_nature: 'Type d''évènement'
@@ -2359,11 +2359,11 @@ eng:
       #>document: 'Documents'
       #>document_template: 'Modèles de document'
       #>embankment: 'Encaissements'
-      #>entity: 'Relations'
-      #>entity_category: 'Catégories de relation'
-      #>entity_link: 'Liens de relation'
-      #>entity_link_nature: 'Natures de lien entre relations'
-      #>entity_nature: 'Types de relation'
+      #>entity: 'Personnes'
+      #>entity_category: 'Catégories de personne'
+      #>entity_link: 'Liens de personne'
+      #>entity_link_nature: 'Natures de lien entre personnes'
+      #>entity_nature: 'Types de personne'
       #>establishment: 'Établissements'
       #>event: 'Évènements'
       #>event_nature: 'Types d''évènement'
