--- a/config/locales/fra/general.yml
+++ b/config/locales/fra/general.yml
@@ -204,7 +204,7 @@ fra:
               filename: 'Fiche de [full_name]'
           # balance_sheet: 'Bilan'
           # embankment: 'Remise de chèques'
-          # entity: 'Fiche relation'
+          # entity: 'Fiche personne'
           # income_statement: 'Compte de résultat'
           # inventory: 'Inventaire'
           # invoice: Facture client
@@ -246,7 +246,7 @@ fra:
         sequences:
           relations:
             entities: 
-              name: 'Numérotation des relations'
+              name: 'Numérotation des personnes'
               format: '[number|8]'
           management:
             invoices:
@@ -343,7 +343,7 @@ fra:
         balance: 'Balance'
         balance_sheet: 'Bilan comptable'
         embankment: 'Remise de chèques'
-        entity: 'Fiche relations'
+        entity: 'Fiche personnes'
         financialyear: 'Documents de synthèse'
         general_ledger: 'Grand livre'
         income_statement: 'Compte de résultat'
@@ -559,7 +559,7 @@ fra:
   views:
     shared:
       _entities_search:
-        search: Rechercher une relation
+        search: Rechercher une personne
       _menu:
         informations: 'Informations'
         my_account: 'Mon compte'
