--- a/config/locales/fra/help/relations-entities_import.txt
+++ b/config/locales/fra/help/relations-entities_import.txt
@@ -1,18 +1,22 @@
-====== Comment importer un fichier CSV ? ======
- 
-  * Afin d'importer un fichier csv qui corresponde au format Ekylibre, il est conseillé de **préalablement exporter un fichier csv clients/fournisseurs** afin d'avoir **un fichier défini selon le format Ekylibre** et qu'il sera ensuite possible d'importer.
+====== Comment importer des personnes ? ======
 
-  * Sélectionnez le fichier à télécharger. Ceci va modifier votre base de données de fiches clients et fournisseurs. En effet, si vous avez **modifié ou ajouté des fiches** dans votre fichier csv qui ne l'étaient pas dans la base de données du logiciel, celles-ci le seront grâce à l'import.
+Une importation permet d'**ajouter** de nouvelles fiches sans modifier les fiches existantes. Il est possible de récupérer seulement les informations de description des personnes (Il n'est pas possible de récupérer un historique de ventes, évènements...).
+L'importation se passe en trois étapes.  
 
-  * Pour **ajouter une fiche client ou fournisseur à votre base de données Ekylibre**, vous n'avez qu'à **ajouter une ligne au fichier** csv en veillant à respecter les contraintes relatives à chaque champ (ex: le nom ne peut être vide ...).
+===== Sélection du fichier =====
+Avant de sélectionner votre fichier, pensez bien à utiliser le bon format :
+  * La première ligne du fichier ne sera jamais utilisée car elle contient les titres de colonnes.
+  * Une colonne correspondant au nom de la personne doit toujours être présente
+!!! Le format CSV doit être un format //propre//. Pour cette raison, il est recommandé d'utiliser //OpenOffice// qui permet de produire ce type de document.
 
-  * Vous pouvez donc **générer automatiquement des fiches clients fournisseurs ainsi que des types de fiche**. En effet si le type de fiche du fichier csv n'existe pas, celui-ci sera également créé. 
+===== Correspondance des colonnes =====
+Cette étape permet de faire correspondre chaque colonne du tableau importé à une donnée dans //Ekylibre//.
 
-  * Veillez à bien **respecter le format des colonnes** présenté sur la page afin que l'import puisse s'effectuer correctement.
+===== Validation et importation =====
+Une fois la correspondance effectuée, l'intégralité du fichier est testé avant d'être importé. À la suite un rapport est émis en cas d'erreur. Suivant les problèmes, vous serez amené à les corriger dans votre fichier et à recommencer la procédure.
 
-  * **La première ligne du fichier ne sera jamais exploitée** car elle représente le titre de la colonne.
+!!! Cette opération peut être longue si votre fichier est important. Attendez avant de rafraichir la page trop vite.
 
-  * Les colonnes 5 à 11 servent à former l'adresse principale de la fiche.
 
 [[relations-index|Revenir à l'aide de gestion des relations ]]
  
