--- a/config/locales/fra/pack.relations.yml
+++ b/config/locales/fra/pack.relations.yml
@@ -115,18 +115,18 @@ fra:
           zero: 'Aucune fiche enregistrée' #!
  #!
         title: 'Fiches des personnes'
+      entities_export:
+        title: 'Exportation de fiches'
       entities_import:
-        csv_file: 'Fichier CSV à importer' #!
-        defined_columns: 'Voici le format à respecter des colonnes du fichier csv à importer :' #!
-        entities_export: 'Exporter vos fiches clients / fournisseurs au format CSV' #!
-        file_to_download: 'Export de la liste des clients/fournisseurs' #!
-        file_to_upload: 'Import de la liste des clients/fournisseurs' #!
+        columns: 'Colonnes à importer'
         import: 'Importer'
-        please_consult_help_to_have_more_informations: 'Veuillez consulter l''aide pour avoir plus d''informations sur l''import' #!
-        title: 'Import/Export des fiches clients et fournisseurs au format CSV'
-        #>upload: # Potentially missing translation
+        line: 'Ligne n°{{index}} :'
+        errors_explanation: 'Il y a des erreurs dans le fichier. Si vous ne corrigez pas les problèmes, les lignes erronées ne seront pas prises en compte lors de l''importation'
+        importation_explanation: 'Pour confirmer l''importation, vous devez confirmer en cliquant sur Importer.'
+        title: 'Importation de fiches'
+        upload:  'Fichier à importer'
         #>first_line_as_title: # Potentially missing translation
-        #>file_nature: # Potentially missing translation
+        file_nature: Type de fichier
       entities_merge:
         entity_to_delete: 'Doublon à fusionner (et faire disparaitre)'
         entity_to_update: 'Fiche à mettre à jour avec les éléments du doublon'
