--- a/config/locales/fra/pack.relations.yml
+++ b/config/locales/fra/pack.relations.yml
@@ -116,17 +116,37 @@ fra:
  #!
         title: 'Fiches des personnes'
       entities_export:
+        add_condition: 'Ajouter la condition'
+        add_conditions: 'Ajoutez des conditions'
+        all_conditions: 'toutes les conditions'
+        check: 'Vérifier'
+        conditions:  #!
+          filter_on_attribute_of_class: 'Filtre sur {{attribute}} ({{class}})' #!
+          special-subscriber: 'Filtre Abonné' #!
+ #!
+        one_condition: 'au moins une condition'
+        select_columns: 'Cochez les colonnes que vous voulez voir apparaitre dans le tableau.'
         title: 'Exportation de fiches'
+      _entities_export_condition:
+        moment:  #!
+          after: 'après le' #!
+          before: 'avant le' #!
+          now: 'au' #!
+ #!
+        reverse: 'Appliquer la condition inverse'
+        subscriber_period: 'Abonné(e) {{moment}} {{subscribed_on}}' #!
+        subscriber_quantity: 'Abonné(e) {{moment}} numéro {{subscribed_on}}' #!
+        #>unknown_condition: # Potentially missing translation
       entities_import:
         columns: 'Colonnes à importer'
-        import: 'Importer'
-        line: 'Ligne n°{{index}} :'
         errors_explanation: 'Il y a des erreurs dans le fichier. Si vous ne corrigez pas les problèmes, les lignes erronées ne seront pas prises en compte lors de l''importation'
+        file_nature: 'Type de fichier'
+        import: 'Importer' #!
         importation_explanation: 'Pour confirmer l''importation, vous devez confirmer en cliquant sur Importer.'
+        line: 'Ligne n°{{index}} :'
         title: 'Importation de fiches'
-        upload:  'Fichier à importer'
+        upload: 'Fichier à importer'
         #>first_line_as_title: # Potentially missing translation
-        file_nature: Type de fichier
       entities_merge:
         entity_to_delete: 'Doublon à fusionner (et faire disparaitre)'
         entity_to_update: 'Fiche à mettre à jour avec les éléments du doublon'
