--- a/config/locales/jpn/notifications.yml
+++ b/config/locales/jpn/notifications.yml
@@ -12,11 +12,12 @@ jpn:
     #>changes_have_been_reflected: 'Les changements ont été correctement répercutés sur l''état des stocks actuel'
     #>changes_have_not_been_reflected: 'Les changements n''ont pas pu être correctement répercutés sur l''état des stocks actuel'
     #>closed_financialyears: 'L''exercice a été correctement clôturé'
-    #>columns_are_already_uses: '(((COLUMNS_ARE_ALREADY_USES)))'
-    #>entity_columns_are_needed: '(((ENTITY_COLUMNS_ARE_NEEDED)))'
+    #>columns_are_already_uses: 'Une ou plusieurs colonnes à importer sont sélectionnées plusieurs fois'
+    #>entity_columns_are_needed: 'Vous devez spécifier au moins une colonne pour la personne et notamment son nom.'
     #>expired_session: 'Session expirée. Veuillez vous reconnecter.'
     #>fails_to_extract_listing: 'L''extraction n''a pas pu s''effectuer : {{message}}'
     #>import_succeeded: 'Vos données ont été correctement importées '
+    #>importation_finished: 'L''importation est terminée.'
     #>impossible_to_add_lines: 'Vous ne pouvez plus ajouter de produits à votre vente, le devis est passé en commande'
     #>impossible_to_add_lines_to_purchase: 'Vous ne pouvez plus ajouter de produits à votre achat'
     #>invalid_file_nature: '(((INVALID_FILE_NATURE)))'
